--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="about.html">ABOUT</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,7 +41,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">SERVICES</a>
+                    <a class="nav-link" href="services.html">SERVICES</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active text-white" href="contact.html">CONTACT</a>
@@ -57,8 +57,8 @@
             </div>
           </nav>
     </section>
-
-    <section id="contact1" class="text-center">
+    <main>
+      <section id="contact1" class="text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 m-auto">
@@ -96,7 +96,7 @@
                 <div class="col-lg-4 col-md-12">
                     <div class="d-flex align-items-center">
                         <div class="bg-dark d-flex justify-content-center align-items-center">
-                           <i class="bi bi-geo-alt "></i> 
+                          <i class="bi bi-phone"></i>
                         </div>       
                         <div>
                             <h4>Call :</h4>
@@ -128,7 +128,8 @@
         <h6 class="font-weight-normal">&copy; Copyright <span class="font-weight-bold">PhotoFolio. </span>All Rights Reserved</h6>
         <p>Designed by <a class="" href="">Youssef</a></p>
     </footer>
+ </main>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-</main>
 </body>
 </html>
